apps/base/campfire-alert-bridge/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: campfire-alert-bridge
  namespace: campfire
spec:
  ports:
    - port: 8080
      targetPort: http
  selector:
    app: campfire-alert-bridge
  type: ClusterIP
